public class ClassicFSMDecision
{
    public Status Decide(Animal a)
    {
        // Current switch-case from Animal.cs
        return Status.WANDER;
    }
}